--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.jdacruz.chhackhowmuchperpod
+pluginGroup = com.cloudhealth.hackaton.chhackhowmuchperpod
 pluginName = ch-hack-how-much-per-pod
 pluginVersion = 0.0.1
 pluginSinceBuild = 202
